# mktable

./: LICENSE  README.md  TODO.md  mktable.py  pyproject.toml
src/mktable/: __init__.py  mktable.py
tests/: test.py  unit_test.py  unittest.py
